# c-lean-libp2p

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  progress.md
.github/scripts/: checkout-submodules.sh
.github/workflows/: benchmark.yml  cert-c.yml  ci.yml  codeql.yml  coverage.yml  duvet.yml  fuzz.yml  gcc-analyzer.yml  gossipsub-interop.yml  interop.yml  misra-c.yml  spec-tests.yml
include/libp2p/: libp2p_host.h  libp2p_host_secp256k1_identity.h
include/multiformats/multiaddr/: multiaddr.h
include/multiformats/multibase/: multibase.h
include/multiformats/multicodec/: multicodec.h
include/multiformats/multihash/: multihash.h
include/multiformats/multistream-select/: multistream_select.h
include/multiformats/unsigned_varint/: unsigned_varint.h
include/multiselect/: multiselect.h
include/peer_id/: peer_id.h
include/peer_record/: peer_record.h
include/protocol/gossipsub/: gossipsub.h
include/protocol/identify/: identify.h
include/protocol/ping/: ping.h
include/transport/quic/: quic.h  quic_addr.h  quic_backend.h  quic_identity.h  quic_service.h  quic_stream.h  quic_types.h  quic_udp.h
interop/c-lean-libp2p/: Dockerfile  redis_client.c  redis_client.h  transport_interop.c
interop/c-lean-libp2p-gossipsub/: gossipsub_interop.c  gossipsub_interop.h  gossipsub_interop_json.c
src/libp2p/: host_core.c  host_dial.c  host_drive.c  host_identity.c  host_internal.h  host_protocols.c  host_quic_transport.c  host_streams.c  libp2p_host_core.c  libp2p_host_dial.c  libp2p_host_drive.c  libp2p_host_identity.c  libp2p_host_internal.h  libp2p_host_protocols.c  libp2p_host_quic_transport.c  libp2p_host_streams.c
src/multiformats/multiaddr/: multiaddr.c
src/multiformats/multibase/: multibase.c
src/multiformats/multicodec/: multicodec.c
src/multiformats/multihash/: multihash.c
src/multiformats/multistream-select/: multistream_select.c
src/multiformats/unsigned_varint/: unsigned_varint.c
src/multiselect/: multiselect.c
src/peer_id/: peer_id.c
src/peer_record/: peer_record_envelope.c  peer_record_internal.h  peer_record_payload.c  peer_record_signed.c  peer_record_wire.c
src/protocol/gossipsub/: gossipsub.c  gossipsub_api.c  gossipsub_codec.c  gossipsub_codec_control.c  gossipsub_codec_control_advert.c  gossipsub_codec_control_payload.c  gossipsub_codec_message.c  gossipsub_codec_rpc.c  gossipsub_codec_wire.c  gossipsub_config.c  gossipsub_host.c  gossipsub_internal.h  gossipsub_rx.c  gossipsub_state.c  gossipsub_tx.c  gossipsub_util.c
src/protocol/identify/: identify.c
src/protocol/ping/: ping.c
src/transport/quic/: quic.c  quic_addr.c  quic_backend_ngtcp2_alloc.c  quic_backend_ngtcp2_awslc.c  quic_backend_ngtcp2_callbacks.c  quic_backend_ngtcp2_conn.c  quic_backend_ngtcp2_endpoint.c  quic_backend_ngtcp2_internal.h  quic_backend_ngtcp2_stream.c  quic_backend_ngtcp2_tls.c  quic_backend_ngtcp2_util.c  quic_identity.c  quic_service.c  quic_stream.c  quic_udp.c
tests/: run_multiformats_tests.sh
tests/common/: multiformats_test_utils.c  multiformats_test_utils.h
tests/spec/libp2p/: test_libp2p_host.c
tests/spec/multiformats/multiaddr/: test_multiaddr.c
tests/spec/multiformats/multibase/: test_multibase.c
tests/spec/multiformats/multicodec/: test_multicodec.c
tests/spec/multiformats/multihash/: test_multihash.c
tests/spec/multiformats/multistream-select/: test_multistream_select.c
tests/spec/multiformats/unsigned_varint/: test_unsigned_varint.c
tests/spec/multiselect/: test_multiselect.c
tests/spec/peer_id/: test_peer_id.c
tests/spec/peer_record/: test_peer_record.c
tests/spec/protocol/gossipsub/: test_gossipsub.c
tests/spec/protocol/identify/: test_identify.c
tests/spec/protocol/ping/: test_ping.c
tests/spec/transport/quic/: test_quic_tls_vectors.c  test_quic_transport.c
tests/support/: host_test_support.h  protocol_loopback_support.h  quic_test_support.h
tests/unit/libp2p/: test_libp2p_host.c  test_libp2p_host_accessors.c  test_libp2p_host_quic_accessors.c
tests/unit/multiformats/multiaddr/: test_multiaddr.c
tests/unit/multiformats/multibase/: test_multibase.c
tests/unit/multiformats/multicodec/: test_multicodec.c
tests/unit/multiformats/multihash/: test_multihash.c
tests/unit/multiformats/multistream-select/: test_multistream_select.c
tests/unit/multiformats/unsigned_varint/: test_unsigned_varint.c
tests/unit/multiselect/: test_multiselect.c
tests/unit/peer_id/: test_peer_id.c
tests/unit/peer_record/: test_peer_record.c
tests/unit/protocol/gossipsub/: test_gossipsub.c
tests/unit/protocol/identify/: test_identify.c
tests/unit/protocol/ping/: test_ping.c
tests/unit/transport/quic/: test_quic_addr.c  test_quic_endpoint.c  test_quic_identity.c  test_quic_lifecycle.c  test_quic_service.c  test_quic_udp.c
tools/cppcheck/: misra_external_api.h
